--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "private": false,
   "type": "module",
   "bin": {
-    "mongodb": "./build/index.js"
+    "mongodb": "./build/index_new.js"
   },
   "files": [
     "build"
   ],
   "scripts": {
-    "build": "tsc && node -e \"require('fs').chmodSync('build/index.js', '755')\"",
+    "build": "tsc && node -e \"require('fs').chmodSync('build/index_new.js', '755')\"",
     "prepare": "npm run build",
     "watch": "tsc --watch",
-    "inspector": "npx @modelcontextprotocol/inspector build/index.js"
+    "inspector": "npx @modelcontextprotocol/inspector build/index_new.js"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "0.6.0",
